# sevilla-imd-website

./: .env.example  .gitignore  Guia_desarrollo.md  Makefile  README.md  docker-compose-backend.yml  docker-compose-frontend.yml  docker-compose.yml  repository.toml  towncrier.toml
backend/: .mrbob.ini  CONTRIBUTORS.md  Dockerfile  Dockerfile.acceptance  LICENSE.md  Makefile  README.md  instance.yaml  mx.ini  pyproject.toml
backend/news/: 1.feature  14.feature  15.feature  17.feature  18.feature  2.feature  20.feature  23.feature  25.feature  3.feature  4.feature  5.feature
backend/scripts/: create_site.py
backend/src/sevilla/imd/website/: __init__.py  configure.zcml  dependencies.zcml  permissions.zcml  profiles.zcml  testing.py
backend/src/sevilla/imd/website/content/: district.py  sports_center.py  sports_center.xml
backend/src/sevilla/imd/website/controlpanel/: configure.zcml
backend/src/sevilla/imd/website/locales/: sevilla.imd.website.pot
backend/src/sevilla/imd/website/locales/en/LC_MESSAGES/: sevilla.imd.website.po
backend/src/sevilla/imd/website/locales/es/LC_MESSAGES/: sevilla.imd.website.po
backend/src/sevilla/imd/website/profiles/default/: browserlayer.xml  catalog.xml  metadata.xml  rolemap.xml  types.xml
backend/src/sevilla/imd/website/profiles/default/registry/: main.xml  plone.base.interfaces.controlpanel.IMailSchema.xml  plone.base.interfaces.controlpanel.INavigationSchema.xml  plone.base.interfaces.controlpanel.ISiteSchema.xml  plone.base.interfaces.controlpanel.ISocialMediaSchema.xml  plone.i18n.interfaces.ILanguageSchema.xml
backend/src/sevilla/imd/website/profiles/default/types/: District.xml  Plone_Site.xml  SportsCenter.xml
backend/src/sevilla/imd/website/profiles/uninstall/: browserlayer.xml
backend/src/sevilla/imd/website/serializers/: configure.zcml
backend/src/sevilla/imd/website/setuphandlers/: __init__.py  initial.py
backend/src/sevilla/imd/website/setuphandlers/examplecontent/: redirects.json  relations.json
backend/src/sevilla/imd/website/setuphandlers/examplecontent/content/: __metadata__.json
backend/src/sevilla/imd/website/setuphandlers/examplecontent/content/002e1678756e409da03c1f180d1ecc8f/: data.json
backend/src/sevilla/imd/website/setuphandlers/examplecontent/content/0049b43af82e438daa9ed40040888bd7/: data.json
backend/src/sevilla/imd/website/setuphandlers/examplecontent/content/0e9542c0ac014690bc6c8bb3039c8a41/: data.json
backend/src/sevilla/imd/website/setuphandlers/examplecontent/content/159e3ea4588349b79161120ec4ab9b4e/: data.json
backend/src/sevilla/imd/website/setuphandlers/examplecontent/content/19be15b01e734e33ba1244f1ad2c936c/: data.json
backend/src/sevilla/imd/website/setuphandlers/examplecontent/content/1a0392db7e7045df84741bd72ad61f70/: data.json
backend/src/sevilla/imd/website/setuphandlers/examplecontent/content/1d4cfbab8e744b2daee5fa00b40b42e7/: data.json
backend/src/sevilla/imd/website/setuphandlers/examplecontent/content/1e361df0ab0f4fc48fd32019b3c6fb09/: data.json
backend/src/sevilla/imd/website/setuphandlers/examplecontent/content/1e9fc86c17ed463896cdbaa0db89e950/: data.json
backend/src/sevilla/imd/website/setuphandlers/examplecontent/content/20ffb595ff6d45d7a80088f20a262385/: data.json
backend/src/sevilla/imd/website/setuphandlers/examplecontent/content/21e3fa5b3285419abf86f6b8ea43dab6/: data.json
backend/src/sevilla/imd/website/setuphandlers/examplecontent/content/23bdd3a192a7412a883dc01602161090/: data.json
backend/src/sevilla/imd/website/upgrades/: configure.zcml
backend/src/sevilla/imd/website/vocabularies/: configure.zcml  sports_center.py
backend/tests/: conftest.py
backend/tests/setup/: test_setup_install.py  test_setup_uninstall.py
backend/tests/vocabularies/: test_voc_activities.py  test_voc_complementary_services.py  test_voc_management_models.py
(+126 files in other folders)
